@@ -9,7 +9,6 @@
 ./Mono.Linker/I18nAssemblies.cs
 ./Mono.Linker/MethodAction.cs
 ./Mono.Linker/ResolutionException.cs
-./Mono.Linker/XApiService.cs
 ./Mono.Linker/XApiReader.cs
 ./Mono.Linker/IXApiVisitor.cs
 ./Mono.Linker.Steps/BaseStep.cs
